# doctors_assistant

./: .gitignore  README.md  main.py  main_api.py  pyproject.toml  requirements.txt
app/: llm_client.py  main.py  orchestrator.py  prompts.py  session_model.py  session_store.py  session_store_memory.py  session_store_redis.py  state.py
app/api/: chatbot.py  models.py
app/ui/: streamlit_app.py
db/: booking_repo.py  connection.py  doctor_repo.py  schedule_repo.py  schema.sql  seed.sql
docs/: doctor-assistant.md
tests/: setup_database.py  setup_db.sql  test_booking_scenarios.py  test_db_connection.py  test_redis.py
